src/test/ui/const-generics/const_evaluatable_checked/simple_fail.full.stderr
error: failed to evaluate the given constant
  --> $DIR/simple_fail.rs:14:5
   |
LL | fn test<const N: usize>() -> Arr<N> where Arr<N>: Sized {
   |                                           ------ required by this bound in `test`
...
LL |     test::<0>();
   |     ^^^^^^^^^

error: failed to evaluate the given constant
  --> $DIR/simple_fail.rs:14:5
   |
LL |     test::<0>();
   |     ^^^^^^^^^^^

error: aborting due to 2 previous errors

